syntax = "proto3";
package prodvana.runtimes.extensions;
option go_package = "github.com/prodvana/prodvana-public/go/prodvana-sdk/proto/prodvana/runtimes/extensions";
import "prodvana/common_config/external_link.proto";
import "prodvana/runtimes/debug_event.proto";

message ExternalObjectVersion {
    string version = 1;
    int32 replicas = 2; // Created/running replicas, can be in any state
    int32 available_replicas = 5; // Replicas which have passed healthchecks for required duration.
    int32 target_replicas = 6; // How many replicas are supposed to be spun up, if known
    bool active = 3;
    bool drifted = 4;
    // next tag: 7
}

message ExternalObject {
    enum Status {
        PENDING = 0;
        SUCCEEDED = 1;
        FAILED = 2;
    }
    string name = 1;
    string object_type = 2;
    repeated ExternalObjectVersion versions = 3;
    Status status = 4;
    repeated prodvana.common_config.ExternalLink external_links = 5;
    string message = 6;  // freeform message explaining the status, for example, error message
    repeated prodvana.runtimes.DebugEvent debug_events = 7;
}

// output format for the fetch command, in json format
// optional. Fetch commands can choose to implement the output, or exit 0 or 2.
message FetchOutput {
    repeated ExternalObject objects = 1;
}

enum FetchMode {
    UNKNOWN_FETCH_MODE = 0;
    // fetch will either exit 0 or 2 to indicate drift
    EXIT_CODE = 1;
    // fetch will return structured output via stdout
    STRUCTURED_OUTPUT = 2;
}
